--- a/src/app/note/note.component.css
+++ b/src/app/note/note.component.css
@@ -15,6 +15,7 @@
   padding-left: 8px;
   padding-top: 5px;
   font-family: roboto;
+  height: 75vh;
 }
 
 .note-content-input {
